--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -59,8 +59,7 @@
             </ion-item>
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
-        <p class="treffpunkt">Geb.10.91 Masch.bau mittlerer Hörsaal</p>
-        
+        <p class="treffpunkt">Geb.10.91 Maschinenbau, Mittlerer Hörsaal</p>
     </div>
 
     <div id="g2">
@@ -91,6 +90,8 @@
                 <a href="tel:+49-176-47744211">+49 176 47744211</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.91 Raum 228</p>
     </div>
 
     <div id="g3">
@@ -125,6 +126,8 @@
                 <a href="tel:+49-170-7931625">+49 170 7931625</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.50 HS 101</p>
     </div>
 
     <div id="g4">
@@ -159,6 +162,8 @@
                 <a href="tel:+49-152-56455935">+49 152 56455935</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.50 Raum HS 102</p>
     </div>
 
     <div id="g5">
@@ -189,6 +194,8 @@
                 <a href="tel:+49-157-32103456">+49 157 32103456</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.50 Raum 602</p>
     </div>
 
     <div id="g6">
@@ -223,6 +230,8 @@
                 <a href="tel:+49-157-55434028">+49 157 55434028</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.50 Raum 604</p>
     </div>
 
     <div id="g7">
@@ -253,6 +262,8 @@
                 <a href="tel:+49-151-55256289">+49 151 55256289</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.50 Raum 702</p>
     </div>
 
     <div id="g8">
@@ -283,6 +294,8 @@
                 <a href="tel:+49-152-57693050">+49 152 57693050</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.50 Raum 701.3</p>
     </div>
 
     <div id="g9">
@@ -317,6 +330,8 @@
                 <a href="tel:+49-152-59732736">+49 152 59732736</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 50.41 Raum -134</p>
     </div>
 
     <div id="g10">
@@ -347,6 +362,8 @@
                 <a href="tel:+49-157-38923106">+49 157 38923106</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 50.41 Raum -133</p>
     </div>
 
     <div id="g11">
@@ -381,6 +398,8 @@
                 <a href="tel:+49-157-79242936">+49 157 79242936</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 50.41 Raum -108</p>
     </div>
 
     <div id="g12">
@@ -415,6 +434,8 @@
                 <a href="tel:+49-174-9493665">+49 174 9493665</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 50.41 Raum -109</p>
     </div>
 
     <div id="g13">
@@ -449,6 +470,8 @@
                 <a href="tel:+49-152-56134468">+49 152 56134468</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 50.41 Raum 045/046</p>
     </div>
 
     <div id="g14">
@@ -483,6 +506,15 @@
                 <a href="tel:+49-162-8572660">+49 162 8572660</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">
+            <b>
+                <u>Mo./Di:</u>
+            </b> Geb. 30.96 Seminarraum 1.OG (R104)</p>
+        <p class="treffpunkt">
+            <b>
+                <u>Do./Fr:</u>
+            </b> Geb. 10.91 Maschinenbau oberer HS</p>
     </div>
 
     <div id="g15">
@@ -517,6 +549,8 @@
                 <a href="tel:+49-172-6561244">+49 172 6561244</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 30.96 Seminarraum ZOM (R006)</p>
     </div>
 
     <div id="g16">
@@ -547,6 +581,8 @@
                 <a href="tel:+49-176-50945729">+49 176 50945729</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.81 Theodor Rehbock HS (HS59)</p>
     </div>
 
     <div id="g17">
@@ -581,6 +617,8 @@
                 <a href="tel:+49-172-7147595">+49 172 7147595</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.81 Emil Mosonyi-HS (HS62)</p>
     </div>
 
     <div id="g18">
@@ -611,6 +649,8 @@
                 <a href="tel:+49-152-34389949">+49 152 34389949</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 10.81 Raum 219.1</p>
     </div>
 
     <div id="g19">
@@ -645,6 +685,8 @@
                 <a href="tel:+49-151-46402100">+49 151 46402100</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 30.28 Seminarraum 1 (R220)</p>
     </div>
 
     <div id="g20">
@@ -675,6 +717,8 @@
                 <a href="tel:+49-176-45973765">+49 176 45973765</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 30.28 Seminarraum 2 (R120)</p>
     </div>
 
     <div id="g21">
@@ -709,6 +753,8 @@
                 <a href="tel:+49-173-2776502">+49 173 2776502</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 30.28 Seminarraum 3 (R005)</p>
     </div>
 
     <div id="g22">
@@ -743,6 +789,8 @@
                 <a href="tel:+49-174-9898279">+49 174 9898279</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 30.28 Seminarraum 4 (R004)</p>
     </div>
 
     <div id="g23">
@@ -777,6 +825,8 @@
                 <a href="tel:+49-157-81743449">+49 157 81743449</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 05.20 Raum 1.C01</p>
     </div>
 
     <div id="g24">
@@ -811,6 +861,8 @@
                 <a href="tel:+49-176-45655413">+49 176 45655413</a>
             </ion-item>
         </ion-list>
+        <p class="frühstück">Treffpunkt Frühstück:</p>
+        <p class="treffpunkt">Geb. 05.20 Raum 1.C04</p>
     </div>
 
     <div id="g25" style="margin-top: 8%;">
@@ -865,16 +917,20 @@
                 <b>Fachschaft</b>
                 <a href="tel:0721 60843806">0721 60843806</a>
             </ion-item>
+            <ion-item>
+                <b>ETL's siehe Tutorenbibel</b>
+            </ion-item>
         </ion-list>
-
-        <h4> ETL's siehe Tutorenbibel</h4>
-
-
-
-        <ion-item class="center">
-            <b>Wichtige Links:</b>
-
-        </ion-item>
+        <h5 class="center">
+            <u>
+                Wichtige Links:
+            </u>
+        </h5>
+        <ion-list>
+            <ion-item>
+                <a href="#" onclick="window.open('https://docs.google.com/spreadsheets/d/11BQ8evu4J7P-ATAyuhFk53lnYCGlACtNxVr21Iwv4-0/edit#gid=0', '_system', 'location=yes'); return false;">Schloga-Livepunkte Dokument</a>
+            </ion-item>
+        </ion-list>
 
     </div>
 
