--- a/src/pages/graphs/graphs.html
+++ b/src/pages/graphs/graphs.html
@@ -37,26 +37,34 @@
   <button ion-button block [style.backgroundColor]="myColor" (click)="changeColor()">Live</button>
   <ion-list>
     <button ion-item (click)="openBier()">
-      <ion-icon name="ios-beer-outline" item-start></ion-icon>
+      <ion-icon name="ios-podium-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Bierstatistik
     </button>
-
     <button ion-item (click)="openSchloga()">
       <ion-icon name="ios-walk-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Schloga-Live
     </button>
-
     <button ion-item (click)="openKaraoke()">
       <ion-icon name="ios-microphone-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Karaoke-Voting
     </button>
+    <button ion-item (click)="openFlunky()">
+      <ion-icon name="ios-football-outline" item-start></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+      Flunky-Bowl Live
+    </button>
+    <button ion-item (click)="openGaha()">
+      <ion-icon name="ios-beer-outline" item-start></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+      GaHa-Party Voting
+    </button>
   </ion-list>
 
 
-  <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/457973181&color=%23dbcd61&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+  <iframe style="margin-top: 5%" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/457973181&color=%23dbcd61&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/321103235&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
 </ion-content>
