--- a/src/pages/karaoke/karaoke.html
+++ b/src/pages/karaoke/karaoke.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>Karaoke-Voting</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="refresh()">
+        <ion-icon name="md-refresh"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
