--- a/src/pages/graphs/graphs.html
+++ b/src/pages/graphs/graphs.html
@@ -24,7 +24,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content [style.backgroundColor]="myColor2" padding>
 
 
 
@@ -36,27 +36,27 @@
 
   <button ion-button block [style.backgroundColor]="myColor" (click)="changeColor()">Live</button>
   <ion-list>
-    <button ion-item (click)="openBier()">
+    <button [style.backgroundColor]="myColor2" ion-item (click)="openBier()">
       <ion-icon name="ios-podium-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Bierstatistik
     </button>
-    <button ion-item (click)="openSchloga()">
+    <button [style.backgroundColor]="myColor2" ion-item (click)="openSchloga()">
       <ion-icon name="ios-walk-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Schloga-Live
     </button>
-    <button ion-item (click)="openKaraoke()">
+    <button [style.backgroundColor]="myColor2" ion-item (click)="openKaraoke()">
       <ion-icon name="ios-microphone-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Karaoke-Voting
     </button>
-    <button ion-item (click)="openFlunky()">
+    <button [style.backgroundColor]="myColor2" ion-item (click)="openFlunky()">
       <ion-icon name="ios-football-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Flunky-Bowl Live
     </button>
-    <button ion-item (click)="openGaha()">
+    <button [style.backgroundColor]="myColor2" ion-item (click)="openGaha()">
       <ion-icon name="ios-beer-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       GaHa-Party Voting
@@ -66,5 +66,5 @@
 
   <iframe style="margin-top: 5%" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/457973181&color=%23dbcd61&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/321103235&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-
+  <button small (click)="resetColor()">Reset</button>
 </ion-content>
