added whats app buttons

--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -32,6 +32,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Sebastian Celis: </b>
@@ -68,6 +75,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Paula Manzanares: </b>
@@ -100,6 +114,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Ann-Karolin Krause: </b>
@@ -136,6 +157,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Sibylla Heckmann: </b>
@@ -172,6 +200,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Konrad Appel: </b>
@@ -204,6 +239,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Fabian Dernbach: </b>
@@ -240,6 +282,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Katharina Mitterer: </b>
@@ -272,6 +321,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Tim Bergander: </b>
@@ -304,6 +360,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Antonia Hohaus: </b>
@@ -340,6 +403,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Madita Krüger: </b>
@@ -372,6 +442,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Finn von Lauppert: </b>
@@ -408,6 +485,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Anni Becker: </b>
@@ -444,6 +528,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Dominik Neller: </b>
@@ -480,6 +571,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Stefan Stumpf: </b>
@@ -523,6 +621,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Leonie Roos: </b>
@@ -559,6 +664,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Leonie Rübenacker: </b>
@@ -591,6 +703,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Mera Grebe: </b>
@@ -627,6 +746,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Hendrik Baden: </b>
@@ -659,6 +785,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Lea Michels: </b>
@@ -695,6 +828,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Magdalena Geib: </b>
@@ -727,6 +867,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Lotta Schlau: </b>
@@ -763,6 +910,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Karim Jaga: </b>
@@ -799,6 +953,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Benedikt Wörz: </b>
@@ -835,6 +996,13 @@
         </h3>
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
+        <div class="center">
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe
+            </a>
+        </div>
         <ion-list>
             <ion-item class="center">
                 <b>Luca Heuser: </b>
