small fixes and included flunky bowl chart

--- a/src/pages/flunky-bowl/flunky-bowl.html
+++ b/src/pages/flunky-bowl/flunky-bowl.html
@@ -18,7 +18,7 @@
 </ion-header>
 
 
-<ion-content padding>
-
-  PLATZHALTER FÜR FLUNKY BALL LIVE SCORE
+<ion-content>
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTyJ2LcD71rpJS5rV7rKdZ3ZqYCI2yK16pg6CWkn2ZCOK-YwxPF6CWCKv9GD8EJWQ0hYbYZS9405KxG/pubhtml?gid=854368843&amp;single=true&amp;widget=true&amp;headers=false"
+    height="100%" scrolling="auto" width="100%" frameBorder="0"></iframe>
 </ion-content>
