added schloga information and 2 new passwords

--- a/src/pages/schloga/schloga.html
+++ b/src/pages/schloga/schloga.html
@@ -20,8 +20,62 @@
 <ion-content>
   <div>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS-I3fxec0yXV4CCyJM6owVTvZaGKz6BZlb-rLakvm15Uvwf73UtW2sBwa1cbKB_7IGIlU9dcILOMrN/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"
-      height="600" scrolling="auto" width="100%" frameBorder="0">
-
+      height="500" scrolling="auto" width="100%" frameBorder="0">
     </iframe>
+    <img src="assets/other/schlogaLageplan.png" style="border:3px solid #45d62d">
   </div>
+  <h3 style="padding-top: 5%; text-align: center; text-decoration: underline;">Startstationen</h3>
+  <ion-list>
+    <ion-item>
+      <b>Gruppe 1 & 3:</b> Station 1</ion-item>
+    <ion-item>
+      <b>Gruppe 5 & 7:</b> Station 2</ion-item>
+    <ion-item>
+      <b>Gruppe 9 & 11:</b> Station 4</ion-item>
+    <ion-item>
+      <b>Gruppe 13 & 15:</b> Station 5</ion-item>
+    <ion-item>
+      <b>Gruppe 17 & 19:</b> Station 6</ion-item>
+    <ion-item>
+      <b>Gruppe 21 & 23:</b> Station 7</ion-item>
+    <ion-item>
+      <b>Gruppe 2:</b> Station 12</ion-item>
+    <ion-item>
+      <b>Gruppe 4:</b> Station 15</ion-item>
+    <ion-item>
+      <b>Gruppe 6 & 8:</b> Station 8</ion-item>
+    <ion-item>
+      <b>Gruppe 10 & 12:</b> Station 9</ion-item>
+    <ion-item>
+      <b>Gruppe 14 & 16:</b> Station 13</ion-item>
+    <ion-item>
+      <b>Gruppe 18 & 20:</b> Station 11</ion-item>
+    <ion-item>
+      <b>Gruppe 22 & 24:</b> Station 14</ion-item>
+  </ion-list>
+  <h3 style="padding-top: 5%; text-align: center; text-decoration: underline;">Essenszeiten</h3>
+  <ion-list>
+    <ion-item>
+      <b>12:00-12:10</b> Gruppe 1 und 2</ion-item>
+    <ion-item>
+      <b>12:10-12:20</b> Gruppe 3 und 4</ion-item>
+    <ion-item>
+      <b>12:20-12:30</b> Gruppe 5 und 6</ion-item>
+    <ion-item>
+      <b>12:30-12:40</b> Gruppe 7, 8 und 9</ion-item>
+    <ion-item>
+      <b>12:50-13:00</b> Gruppe 10 und 11</ion-item>
+    <ion-item>
+      <b>13:00-13:10</b> Gruppe 12 und 13</ion-item>
+    <ion-item>
+      <b>13:10-13:20</b> Gruppe 14 und 15</ion-item>
+    <ion-item>
+      <b>13:20-13:30</b> Gruppe 16, 17 und 18</ion-item>
+    <ion-item>
+      <b>13:40-13:50</b> Gruppe 19 und 20</ion-item>
+    <ion-item>
+      <b>13:50-14:00</b> Gruppe 21 und 22</ion-item>
+    <ion-item>
+      <b>14:00-14:10</b> Gruppe 23 und 24</ion-item>
+  </ion-list>
 </ion-content>
