--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -158,7 +158,7 @@
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
         <div class="center">
-            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/JQG4DwXfABCDemFZzv4ApO', '_system', 'location=yes'); return false;"
                 ion-button small icon-start color="whatsapp">
                 <ion-icon name="logo-whatsapp"></ion-icon>
                 Whatsapp Gruppe
@@ -283,7 +283,7 @@
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
         <div class="center">
-            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GIjtkfdGxsxIedRfSH6xwt', '_system', 'location=yes'); return false;"
                 ion-button small icon-start color="whatsapp">
                 <ion-icon name="logo-whatsapp"></ion-icon>
                 Whatsapp Gruppe
@@ -1097,6 +1097,9 @@
         <ion-list>
             <ion-item>
                 <a href="#" onclick="window.open('https://docs.google.com/spreadsheets/d/11BQ8evu4J7P-ATAyuhFk53lnYCGlACtNxVr21Iwv4-0/edit#gid=0', '_system', 'location=yes'); return false;">Schloga-Livepunkte Dokument</a>
+            </ion-item>
+            <ion-item>
+                <a href="#" onclick="window.open('https://docs.google.com/spreadsheets/d/1gckWg4aBIkJmVvUlk08xFPs4ljCaZ3u1laKHt-Y92XA/edit?usp=sharing', '_system', 'location=yes'); return false;">Flunkybowl Dokument</a>
             </ion-item>
         </ion-list>
 
