--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -211,26 +211,9 @@
             <ion-card-title>
                 GaHa-Party
             </ion-card-title>
-            <h3>Die #fetteste Party in Karlsruhe! Ungelogen.</h3>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>&nbsp; </p>
-            <p>ungelogen.</p>
+            <h4>Die #fetteste Party in Karlsruhe! Ungelogen.</h4>
+           
+            <h1>Fettestes Event der Woche</h1>
         </ion-card-content>
     </ion-card>
 
