--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -36,7 +36,21 @@
         </a>
     </ion-list>
 
-
+    <p>Gruppen für die #geilstenErstis (tretet nur EINER!!!! bei)
+        </p>
+        <ion-list>
+                <a button href="#" onclick="window.open('https://chat.whatsapp.com/CvlIC3NaR2KIIYYhqPNS0h', '_system', 'location=yes'); return false;"
+                ion-button small icon-start color="whatsapp">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+                Whatsapp Gruppe #2
+            </a>
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/BbjABZZDpY5AsgB9vz5ROL', '_system', 'location=yes'); return false;"
+            ion-button small icon-start color="whatsapp">
+            <ion-icon name="logo-whatsapp"></ion-icon>
+            Whatsapp Gruppe #1
+        </a>
+           
+        </ion-list>
 
 
     <p>An diese Adresse kannst du deine Erlebnisse und Bilder des Tages schicken, wenn du willst, dass sie am nächsten Morgen
