--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -166,7 +166,7 @@
         </div>
         <ion-list>
             <ion-item class="center">
-                <b>Sibylla Heckmann: </b>
+                <b>Sibylla Heckmann (hochbegabt): </b>
                 <a href="tel:+49-157-88852810">+49 157 88852810</a>
             </ion-item>
             <ion-item class="center">
@@ -572,7 +572,7 @@
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
         <div class="center">
-            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/EsnuWygmiSZDE0PxJ3WwYC', '_system', 'location=yes'); return false;"
                 ion-button small icon-start color="whatsapp">
                 <ion-icon name="logo-whatsapp"></ion-icon>
                 Whatsapp Gruppe
@@ -747,7 +747,7 @@
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
         <div class="center">
-            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/CH36r6zp8AILkhchZCcwOI', '_system', 'location=yes'); return false;"
                 ion-button small icon-start color="whatsapp">
                 <ion-icon name="logo-whatsapp"></ion-icon>
                 Whatsapp Gruppe
@@ -786,7 +786,7 @@
         <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
         <p></p>
         <div class="center">
-            <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
+            <a button href="#" onclick="window.open('https://chat.whatsapp.com/IMSO2JweiFo3fN7hw1QbXZ', '_system', 'location=yes'); return false;"
                 ion-button small icon-start color="whatsapp">
                 <ion-icon name="logo-whatsapp"></ion-icon>
                 Whatsapp Gruppe
@@ -928,7 +928,7 @@
             </ion-item>
             <ion-item class="center">
                 <b>Andrew Voß: </b>
-                <a href="tel:+49-152-34206161">+49 152 34206161</a>
+                <a href="tel:+49-151-20107960">+49 151 20107960</a>
             </ion-item>
             <ion-item class="center">
                 <b>Armin Saberi: </b>
