--- a/src/pages/graphs/graphs.html
+++ b/src/pages/graphs/graphs.html
@@ -51,15 +51,15 @@
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Karaoke-Voting
     </button>
+    <button [style.backgroundColor]="myColor2" ion-item (click)="openGaha()">
+      <ion-icon name="ios-camera-outline" item-start></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+      Karaoke-Bilder
+    </button>
     <button [style.backgroundColor]="myColor2" ion-item (click)="openFlunky()">
       <ion-icon name="ios-football-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Flunky-Bowl Live
-    </button>
-    <button [style.backgroundColor]="myColor2" ion-item (click)="openGaha()">
-      <ion-icon name="ios-beer-outline" item-start></ion-icon>
-      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
-      GaHa-Party Voting
     </button>
   </ion-list>
 
