--- a/src/pages/karaokebilder/gaha-party.html
+++ b/src/pages/karaokebilder/gaha-party.html
@@ -7,18 +7,16 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>GaHa-Party Voting</ion-title>
+    <ion-title>Karaoke-Bilder</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="refresh()">
         <ion-icon name="md-refresh"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
-PLATZHALTER FÜR GAHA ABSTIMMUNG!
-WORÜBER WIRD EIGENTLICH ABGESTIMMT?
+<ion-content>
+  <iframe src="https://albumizr.com/a/zZub" scrolling="no" frameborder="0" allowfullscreen width="100%" height="100%"></iframe>
 </ion-content>
