--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -440,9 +440,9 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 11:
         </h3>
-        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <img src="assets/other/testgruppenbild.jpg" style="border:3px solid #000000">
         <p></p>
-        <div class="center">
+        <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/ExNaG24QiZ32Vsx0O9jUIK', '_system', 'location=yes'); return false;"
                 ion-button small icon-start color="whatsapp">
                 <ion-icon name="logo-whatsapp"></ion-icon>
