design changes meine gruppe

--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -440,7 +440,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 11:
         </h3>
-        <img src="assets/other/testgruppenbild.jpg" style="border:3px solid #000000">
+        <img src="assets/other/testgruppenbild.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/ExNaG24QiZ32Vsx0O9jUIK', '_system', 'location=yes'); return false;"
@@ -449,7 +449,7 @@
                 Whatsapp Gruppe
             </a>
         </div>
-        <ion-list>
+        <ion-list style="border:1px solid #1985ff; margin-top: 5%;">
             <ion-item class="center">
                 <b>Finn von Lauppert: </b>
                 <a href="tel:+49-163-7835433">+49 163 7835433</a>
